# loop-importer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
benchmarks/: README.md  context-benchmark-results.json  demo-matrix-results.json  run_context_benchmark.py  run_demo_matrix.py  run_semantic_benchmark.py  semantic-benchmark-results.json  semantic-fixture.json
benchmarks/semantic-runs/: run-metadata.json  summary-schema.json
benchmarks/semantic-runs/independent-raw/: run-01.json  run-02.json  run-03.json  run-04.json  run-05.json
benchmarks/semantic-runs/independent-structured/: run-01.json  run-02.json  run-03.json  run-04.json  run-05.json
benchmarks/semantic-runs/recursive-raw/: round-01.json  round-02.json  round-03.json  round-04.json  round-05.json  round-06.json  round-07.json  round-08.json  round-09.json  round-10.json
benchmarks/semantic-runs/recursive-structured/: round-01.json  round-02.json  round-03.json  (+4 more)
docs/: SOURCES.md
examples/: README.md  refresh_demo.py
examples/generated-import-packet/: artifact-registry.yaml  bootstrap.md  code-graph.json  import-report.html  import-summary.json  knowledge-baseline.yaml  project-manifest.yaml  review-session.yaml  task-dag.yaml
examples/incomplete-research-project/: .env  README.md  requirements.txt
skills/loop-importer/: SKILL.md
skills/research-project-importer/: SKILL.md
src/loop_importer/: __init__.py  cli.py  codegraph.py  context.py  context_cli.py  core.py
src/research_project_importer/: core.py
tests/: test_benchmark_artifacts.py  test_codegraph.py  test_context.py  test_importer.py
(+16 files in other folders)
