[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "research-project-importer"
version = "0.1.0"
description = "Import an existing scientific project into a review-first agent harness draft"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "emanuelmerino481"}]
dependencies = ["PyYAML>=6.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
research-project-import = "research_project_importer.cli:main"

[project.urls]
Homepage = "https://github.com/emanuelmerino481/research-project-importer"
Issues = "https://github.com/emanuelmerino481/research-project-importer/issues"

[tool.setuptools.packages.find]
where = ["src"]
