[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-importer"
version = "0.1.0"
description = "Import an existing scientific project into a review-first Loop/Harness draft"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Joy"}]
dependencies = ["PyYAML>=6.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
loop-import = "loop_importer.cli:main"

[project.urls]
Homepage = "https://github.com/emanuelmerino481/loop-importer"
Issues = "https://github.com/emanuelmerino481/loop-importer/issues"

[tool.setuptools.packages.find]
where = ["src"]
